# medium-scrap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  medium_sources.yaml  pyproject.toml
migrations/: 001_create_base_schema.sql  002_normalize_schema.sql  migrate.py
scripts/: build_netflix_timeline.py  build_timeline.py  build_timeline_v2.py  extract_content_from_json.py  reclassify_posts.py  relabel_discovered_topics.py  validate_markdown.py
src/application/use_cases/: scrape_posts.py
src/domain/entities/: publication.py
src/domain/repositories/: base.py
src/domain/services/: publication_service.py
src/infrastructure/: content_extractor.py  http_transport.py  indexer.py  persistence.py  pipeline_db.py
src/infrastructure/adapters/: medium_api_adapter.py
src/infrastructure/config/: __init__.py  source_manager.py
src/ml_classifier/: __init__.py  discover_enriched.py  discover_topics.py  mlb.joblib  mlb_embeddings.joblib  model.joblib  model_embeddings.joblib  predict.py  predict_embeddings.py  requirements.txt  tech_extractor.py  topic_model.joblib  train.py  train_embeddings.py  vectorizer.joblib
src/presentation/: cli.py  cli_old_backup.py
src/presentation/commands/: __init__.py  collect_command.py  etl_command.py  export_timeline_command.py  full_command.py  reprocess_ml_command.py
src/presentation/helpers/: __init__.py  ml_processor.py  progress_display.py  text_cleaner.py
src/presentation/schemas/: __init__.py  ml_schemas.py
tests/integration/: conftest.py  test_api_repository.py  test_api_validation.py  test_comprehensive_scenarios.py  test_scrape_posts.py  test_yaml_repository.py
tests/unit/: test_adapter_helpers.py  test_adapter_html_and_discover.py  test_adapter_more.py  test_api_adapter.py  test_basic_functionality.py  test_cli_and_entities.py  test_cli_commands.py  test_cli_controller_light.py  test_cli_exercise.py  test_cli_flow.py  test_cli_more_branches.py  test_cli_persistence_flow.py  test_content_extractor.py  test_content_extractor_extra.py  test_content_extractor_more.py  test_custom_domain_handling.py  test_entities.py  test_indexer.py  test_medium_api_adapter.py  test_medium_api_adapter_graphql.py  test_medium_api_adapter_more.py  test_persistence.py  test_persistence_integration.py  test_post_id.py  test_publication_all_multi_page_and_invalid.py  test_publication_all_parsing.py  test_publication_service.py  test_publication_service_extra_cases.py  test_publication_service_more.py  test_repository.py  test_source_manager.py  test_source_manager_persistence.py
