[project]
name = "medium-scrap"
version = "0.1.0"
description = "Scraper CLI genérico para qualquer publicação do Medium"
authors = [{name = "Raphael F.", email = "raphaelf.ti@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pytest>=8.4.1",
]

[project.scripts]
medium-scrap = "medium_scraper:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
