[project]
name = "medium-scrap"
version = "0.1.0"
description = "Scraper CLI genérico para qualquer publicação do Medium"
authors = [{name = "Raphael F.", email = "raphaelf.ti@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["medium", "scraper", "cli", "content", "extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0",
    "curl-cffi>=0.13.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pytest>=8.4.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "vcrpy>=4.1.1",
    "lxml>=6.0.2",
    "beautifulsoup4>=4.12.2",
    "markdownify>=0.11.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    # ML dependencies
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.scripts]
medium-scrap = "medium_scraper:cli"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests as requiring network access",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/debug_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
